force-app/main/default/objects/ICX_Repair_Store__mdt/ICX_Repair_Store__mdt.object-meta.xml
<CustomObject>
    <label>ICX Repair Store</label>
    <pluralLabel>ICX Repair Stores</pluralLabel>
</CustomObject>