force-app/main/default/objects/ICX_Repair_Store__mdt/fields/API_Key_Ixopay__c.field-meta.xml
<CustomField>
    <fullName>API_Key_Ixopay__c</fullName>
    <label>API Key Ixopay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>