force-app/main/default/objects/ICX_Repair_Store__mdt/fields/Integrated_PBL__c.field-meta.xml
<CustomField>
    <fullName>Integrated_PBL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integrated PBL</label>
    <type>Checkbox</type>
</CustomField>