force-app/main/default/objects/ICX_Repair_Store__mdt/fields/LanguageLocaleKey__c.field-meta.xml
<CustomField>
    <fullName>LanguageLocaleKey__c</fullName>
    <label>LanguageLocaleKey</label>
    <length>50</length>
    <type>Text</type>
</CustomField>