force-app/main/default/objects/ICX_Repair_Store__mdt/fields/Shared_Secret_Ixopay__c.field-meta.xml
<CustomField>
    <fullName>Shared_Secret_Ixopay__c</fullName>
    <label>Shared Secret Ixopay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>