force-app/main/default/objects/ICX_Repair_Store__mdt/fields/Store_Country__c.field-meta.xml
<CustomField>
    <fullName>Store_Country__c</fullName>
    <label>Store Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>