force-app/main/default/objects/ICX_Repair_Store__mdt/listViews/All_Repair_Store.listView-meta.xml
<ListView>
    <fullName>All_Repair_Store</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Store_Country__c</columns>
    <columns>API_Key_Ixopay__c</columns>
    <columns>Shared_Secret_Ixopay__c</columns>
    <columns>Integrated_PBL__c</columns>
    <columns>LanguageLocaleKey__c</columns>
    <columns>Username__c</columns>
    <columns>Password__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Repair Store</label>
    <language>en_US</language>
</ListView>